--- a/style.css
+++ b/style.css
@@ -73,7 +73,6 @@ li:hover{
 }
 
 .section_quarta {
-    border-radius: 0% 0% 10% 10%;
     background-color: var(--green-secondary);
     padding-bottom: 30vh;
     text-align: center;
@@ -81,7 +80,7 @@ li:hover{
 
 section_quinta {
     border-radius: 0% 0% 10% 10%;
-    background-color: var(--green-secondary);
+    background-color: var(--green-primary);
     padding-bottom: 30vh;
     text-align: center;
 }
