--- a/style.css
+++ b/style.css
@@ -79,8 +79,7 @@ li:hover{
 }
 
 section_quinta {
-    border-radius: 0% 0% 10% 10%;
-    background-color: var(--green-primary);
+    background-color: var(--green-secondary);
     padding-bottom: 30vh;
     text-align: center;
 }
