--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ section_quinta {
 }
 
 /* Responsividade */
-@media only screen and (max-width: 768px) { 
+@media only screen and (max-width: 800x) { 
     #logo {
       display: none;
     }
